[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lipschitz_regularization"
version = "1.0.0"
readme = "README.md"
dependencies = [
    "cython",
    "numpy",
    "matplotlib",
    "plyfile",
    "scikit-image",
    "trimesh",
    "vedo"
]
